Added Support for Java 16 bytecode format