@@ -387,7 +387,32 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <target>14</target>
+                            <target>15</target>
+                            <compilerArgs>
+                                <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java16-compile</id>
+            <activation>
+                <jdk>16</jdk>
+                <file>
+                    <missing>DEFAULTJDKONLY.marker</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <target>16</target>
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
